chore: regenerate Maven projects