@@ -1,17 +1,3 @@
-///usr/bin/env jbang "$0" "$@" ; exit $?
-
-//JAVA 25+
-//REPOS mavencentral,spring-milestones=https://repo.spring.io/milestone
-//DEPS io.netty:netty-bom:4.2.9.Final@pom
-//DEPS org.springframework.ai:spring-ai-pdf-document-reader:2.0.0-M4
-//DEPS org.springframework.ai:spring-ai-vector-store:2.0.0-M4
-//DEPS org.springframework.ai:spring-ai-bedrock:2.0.0-M4
-//DEPS software.amazon.awssdk:bedrockruntime:2.41.34
-//DEPS software.amazon.awssdk:auth:2.41.34
-//DEPS org.slf4j:slf4j-api:2.0.17
-//DEPS org.slf4j:slf4j-simple:2.0.17
-//RUNTIME_OPTIONS --enable-native-access=ALL-UNNAMED
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.ai.bedrock.titan.BedrockTitanEmbeddingModel;
